--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 
 <body>
 <h1>Hello world!</h1>
-<p>This is my test app for Teams.</p>
+<p>This is my test app for Teams. v1</p>
 </body>
 
 </html>
