--- a/config.html
+++ b/config.html
@@ -16,6 +16,6 @@
 window.addEventListener("load", inititate)
 </script>
 <body>
-   <p>Here's my config page!</p>
+   <p>Here's my config page! v1</p>
 </body>
 </html>
