--- a/test.html
+++ b/test.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Test</title>
-<script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
-<script type="text/javascript">
-    microsoftTeams.initialize();
-</script>
-  </head>
+    <meta charset="UTF-8">
+    <title>Test</title>
+    <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        microsoftTeams.initialize();
+        var el = document.GetElementById("message");
+        el += " test";
+    </script>
+</head>
 
 <body>
-<h1>Hello world!</h1>
-<p>This is my test app for Teams. v2</p>
+    <h1>Hello world!</h1>
+    <p>This is my test app for Teams. v2</p>
+    <div id="message">This is the message: </div>
 </body>
 
 </html>
