--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         microsoftTeams.initialize();
         var el = document.GetElementById("message");
-        el += " test";
+        el.innerHTML += " test";
     </script>
 </head>
 
