--- a/test.html
+++ b/test.html
@@ -6,14 +6,13 @@
     <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
     <script type="text/javascript">
         microsoftTeams.initialize();
-        var el = document.GetElementById("message");
-        el.innerHTML += " test";
+        document.getElementById("message").innerHTML += " test";
     </script>
 </head>
 
 <body>
     <h1>Hello world!</h1>
-    <p>This is my test app for Teams. v3</p>
+    <p>This is my test app for Teams. v4</p>
     <div id="message">This is the message: </div>
 </body>
 
