--- a/test.html
+++ b/test.html
@@ -10,6 +10,9 @@
 
             document.getElementById("message").innerHTML += " test";
         }
+        function taskMod() { 
+            alert("Great Job"); 
+        }
         window.onload = start;
 
     </script>
@@ -19,5 +22,6 @@
     <h1>Hello world!</h1>
     <p>This is my test app for Teams. v2</p>
     <div id="message">This is the message: </div>
+    <button onClick="taskMod()">Start Task Module</button>
 </body>
 </html>
