--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
             document.getElementById("message").innerHTML += " test";
         }
         function taskMod() {
-            taskInfo.url = "https://contoso.com/teamsapp/customform";
+            taskInfo.url = "https://000abw.github.io/task.html";
             taskInfo.title = "Custom Form";
             taskInfo.height = 510;
             taskInfo.width = 430;
