--- a/test.html
+++ b/test.html
@@ -2,31 +2,46 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>TaskMod</title>
+    <title>Test</title>
     <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
     <script type="text/javascript">
         microsoftTeams.initialize();
-        function validateForm() {
-            var customerInfo = {
-            name: document.forms["customerForm"]["color"].value,
-            email: document.forms["customerForm"]["food"].value
-                }
-            microsoftTeams.tasks.submitTask(customerInfo);
-            return true;
-}
+        let taskInfo = {
+        title: null,
+        height: null,
+        width: null,
+        url: null,
+        card: null,
+        fallbackUrl: null,
+        completionBotId: null,
+            };
+        function start() {
+
+            document.getElementById("message").innerHTML += " test";
+        }
+        function taskMod() {
+            taskInfo.url = "https://000abw.github.io/task.html";
+            taskInfo.title = "Custom Form";
+            taskInfo.height = 510;
+            taskInfo.width = 430;
+            submitHandler = (err, result) => {
+                document.getElementById("message1").innerHTML += result.color;
+                document.getElementById("message2").innerHTML += result.food;
+                document.getElementById("message3").innerHTML += err;
+            };
+            microsoftTeams.tasks.startTask(taskInfo, submitHandler);
+        }
+        window.onload = start;
+
     </script>
 </head>
 
 <body>
-    <h1>This is the task module</h1>
-    <form method="POST" id="customerForm" action="/register" onSubmit="return validateForm()">
-        Favorite color:<br>
-        <input type="text" name="color">
-        <br>
-        Favorite food:<br>
-        <input type="text" name="food">
-        <br><br>
-        <input type="submit" value="Submit">
-    </form>
+    <h1>Hello world!</h1>
+    <p>This is my test app for Teams. v2</p>
+    <button onClick="taskMod()">Start Task Module</button>
+    <div id="message1">Color: </div>
+    <div id="message2">Food: </div>
+    <div id="message2">Error: </div>
 </body>
 </html>
