--- a/task.html
+++ b/task.html
@@ -11,7 +11,7 @@
             name: document.forms["customerForm"]["color"].value,
             email: document.forms["customerForm"]["food"].value
                 }
-            microsoftTeams.tasks.submitTask(customerInfo);
+            microsoftTeams.tasks.submitTask(customerInfo, "be241cba-1917-4328-9315-93fb6b617e4f");
             return true;
 }
     </script>
