--- a/task.html
+++ b/task.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>This is the task module</h1>
+    <h1>This is the task module v1</h1>
     <form method="POST" id="customerForm" action="/register" onSubmit="return validateForm()">
         Favorite color:<br>
         <input type="text" name="color">
