--- a/test1.html
+++ b/test1.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        microsoftTeams.initialize();
-    </script>
-</head>
+        <style>
+        h1 {
+            font-family: 'Segoe UI';
+        }
 
-<body>
-    <h1>Hello world!</h1>
-    <p>This is my default test app.</p>
-</body>
-</html>
+        p {
+            font-family: 'Segoe UI';
+        }
+        </style>
+
+        <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous" > </script >
+        <script type="text/javascript" >
+        microsoftTeams.initialize();
+        </script >
+        </head >
+        <body >
+        <h1 > Hello world!</h1 >
+        <p > This is my default test app.</p >
+        </body >
+        </html >
