--- a/test2.html
+++ b/test2.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    <style>
+        h1 {
+            font-family: 'Segoe UI';
+        }
+
+        p {
+            font-family: 'Segoe UI';
+        }
+    </style>
     <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
     <script type="text/javascript">
         microsoftTeams.initialize();
