--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-        <style>
+    <style>
         h1 {
             font-family: 'Segoe UI';
         }
@@ -11,15 +11,18 @@
         p {
             font-family: 'Segoe UI';
         }
-        </style>
+    </style>
 
-        <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous" > </script >
-        <script type="text/javascript" >
+    <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
+    <script type="text/javascript">
         microsoftTeams.initialize();
-        </script >
-        </head >
+        var theme = microsoftTemas.getContext();
+        document.getElementById("out").innerHTML += theme;
+    </script>
+</head>
         <body >
         <h1 > Hello world!</h1 >
         <p > This is my default test app.</p >
+        <div id="out">The theme is: </div>
         </body >
         </html >
