--- a/test1.html
+++ b/test1.html
@@ -16,8 +16,10 @@
     <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
     <script type="text/javascript">
         microsoftTeams.initialize();
-        var theme = microsoftTemas.getContext();
-        document.getElementById("out").innerHTML += theme;
+        microsoftTemas.getContext(function (context) {
+            document.getElementById("out").innerHTML += context.theme;
+        });
+        
     </script>
 </head>
         <body >
