--- a/test1.html
+++ b/test1.html
@@ -24,7 +24,7 @@
 </head>
         <body >
         <h1 > Hello world!</h1 >
-        <p > This is my default test app.</p >
+        <p > This is my default test app. v1</p >
         <div id="out">The theme is: </div>
         </body >
         </html >
