--- a/test1.html
+++ b/test1.html
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
     <script type="text/javascript">
         microsoftTeams.initialize();
-        microsoftTemas.getContext(function (context) {
+        microsoftTeams.getContext(function (context) {
             document.getElementById("out").innerHTML += context.theme;
         });
         
@@ -24,7 +24,7 @@
 </head>
         <body >
         <h1 > Hello world!</h1 >
-        <p > This is my default test app. v1</p >
+        <p > This is my default test app. v2</p >
         <div id="out">The theme is: </div>
         </body >
         </html >
