--- a/test1.html
+++ b/test1.html
@@ -11,9 +11,6 @@
         p {
             font-family: 'Segoe UI';
         }
-        div {
-            font-family: 'Segoe UI';
-        }
     </style>
 
     <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
@@ -29,7 +26,6 @@
 </head>
         <body >
         <h1 class="teams">Hello world!</h1>
-        <p class="teams">This is my default test app. v1</pclass="teams">
-        <div id="out" class="teams">The theme is: </div>
+        <p class="teams">This is my default test app. v1</p>
         </body>
         </html>
