--- a/test1.html
+++ b/test1.html
@@ -19,7 +19,7 @@
         microsoftTeams.initialize();
         microsoftTeams.getContext(function (context) {
             if (context.theme != "default") {
-                document.getElementByClassName("teams").style.color = white;
+                document.getElementByClassName("teams").style.color = "white";
             }
         });
         
@@ -27,6 +27,6 @@
 </head>
         <body >
         <h1 class="teams">Hello world!</h1>
-        <p class="teams">This is my default test app. v3</p>
+        <p class="teams">This is my default test app. v4</p>
         </body>
         </html>
