--- a/test1.html
+++ b/test1.html
@@ -20,13 +20,18 @@
                 if (context.theme != "default")
                 { document.body.style.color = "white"; }
             });
+            microsoftTeams.registerOnThemeChangeHandler(function (theme) {
+                microsoftTeams.getContext(function (context) {
+                    if (context.theme != "default") { document.body.style.color = "white"; }
+                });
+            });
         }
         window.onload = initialize;
     </script>
 </head>
         <body>
         <h1>Hello world!</h1>
-        <p>This is my default test app.v1</p>
+        <p>This is my default test app.v2</p>
         <div id="teams">The result is: </div>
         
         </body>
