--- a/test1.html
+++ b/test1.html
@@ -17,12 +17,13 @@
         function initialize() {
             
             microsoftTeams.getContext(function (context) {
-                if (context.theme != "default")
-                { document.body.style.color = "white"; }
+                if (context.theme != "default") { document.body.style.color = "white"; }
+                else { document.body.style.color = "black"; }
             });
             microsoftTeams.registerOnThemeChangeHandler(function (theme) {
                 microsoftTeams.getContext(function (context) {
                     if (context.theme != "default") { document.body.style.color = "white"; }
+                    else { document.body.style.color = "black"; }
                 });
             });
         }
@@ -31,7 +32,7 @@
 </head>
         <body>
         <h1>Hello world!</h1>
-        <p>This is my default test app.v2</p>
+        <p>This is my default test app.v3</p>
         <div id="teams">The result is: </div>
         
         </body>
