--- a/test1.html
+++ b/test1.html
@@ -32,8 +32,6 @@
 </head>
         <body>
         <h1>Hello world!</h1>
-        <p>This is my default test app.v3</p>
-        <div id="teams">The result is: </div>
-        
+        <p>This is my default test app.</p>     
         </body>
         </html>
